# hexmake

./: .gitignore  Cargo.toml  README.md  build.sbt
doc/: building.md  development.md  rationale.md  recipes.md  user-manual.md
examples/c-basic/: Hexmake  lib.c  main.c
integration-tests/args/: Hexmake
integration-tests/buffered-output/: Hexmake
integration-tests/cache_extract_empty_out/: Hexmake  main.c
integration-tests/env/: Hexmake
integration-tests/env1/: Hexmake  test
integration-tests/lock/: Hexmake
integration-tests/output-not-in-out/: Hexmake
scala/src/hexmake/: Main.scala
scala/src/hexmake/ast/: HexPath.scala  HexSettings.scala  HexmakeFile.scala  HexmakeFileValidator.scala  HexmakeParser.scala
scala/src/hexmake/exec/: BuildDirManager.scala  RunHexRule.scala
scala/src/hexmake/graph/: HexPlanner.scala  TaskConductor.scala  TaskNode.scala
scala/src/hexmake/json/: JsonReader.scala  Position.scala
scala/src/hexmake/util/: FileUtils.scala
scala/test/src/hexmake/ast/: HexPathSpec.scala  HexmakeParserSpec.scala
scala/test/src/hexmake/graph/: HexPlannerSpec.scala
scala/test/src/hexmake/util/: HexPaths.scala  TempDirFixture.scala  TempFiles.scala
scripts/: install
src/: args.rs  error.rs  error_exit.rs  lock.rs  main.rs
src/ast/: hex_path.rs  hexmake_file.rs  mod.rs
src/cache/: build_cache.rs  build_hash.rs  mod.rs
src/check/: file.rs
src/exec/: build_dir.rs  command_logger.rs  conductor.rs  mod.rs  rule_builder.rs  work_dir.rs  work_list.rs
src/file_system/: fake.rs  mod.rs  posix.rs  vfs.rs
src/graph/: mod.rs  planner.rs  task.rs
tests/: args.rs  basics.rs  buffered-output.rs  cache_extract_empty_out.rs  env.rs  lock.rs  output-not-in-out.rs
