[package]
name = "hexmake"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hexmake"

[dependencies]
crossbeam-channel = "0.5.15"
ignore = "0.4.25"
itertools = "0.14.0"
regex = "1.12.2"
ring = "0.17.14"
serde = {version ="1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.1.1"
indoc = "2.0.6"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
