[package]
name = "hexmake"
version = "1.0.3"
license = "MIT-0"
description = "Run a multi-step build with caching"
homepage = "https://github.com/lexspoon/hexmake"
repository = "https://github.com/lexspoon/hexmake"
edition = "2024"

[[bin]]
name = "hexmake"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
crossbeam-channel = "0.5.15"
ignore = "0.4.25"
itertools = "0.14.0"
regex = "1.12.2"
ring = "0.17.14"
serde = {version ="1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.1.2"
indoc = "2.0.7"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
